Modified CMAKE file.

--- a/Config.h.in
+++ b/Config.h.in
@@ -23,4 +23,4 @@ SOFTWARE.
 
 #pragma once
 
-#define RANDOM_LIB_VERSION "${RANDOM_VERSION_MAJOR}.${RANDOM_VERSION_MINOR}.${RANDOM_VERSION_PATCH}"
+#define RANDOM_LIB_VERSION "${RANDOM_VERSION_STR}"
